# PyODEPack

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pyodepack/: __init__.py  __init__.pyi  methods.py
pyodepack/include/: lovero_nonstiff.h  lsoda.h  odepack_common.h  radau5.h  rk.h  rk12.h  rk23.h  verner65e.h  verner98e.h
pyodepack/src/: _pyodepack.cpp
