[build-system]

env = ["SYSTEM_VERSION_COMPAT = 1"]

requires = [
    "numpy>=1.22",
    "scipy>=1.10.1",
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytwat"
version = "0.1.0"
description = "Python Traveling Wave Analysis Tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "Vincent Lovero", email = "vllovero@ucdavis.edu"}
]

keywords = ["ODE", "integration", "performance"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/vlovero/PyODEPack"

[tool.setuptools.packages.find]
where = ["pyodepack", "."]

[tool.setuptools.package-data]

pyodepack = [
    "pyodepack/include/*.h",
    "pyodepack/src/*.cpp",
    "pyodepack/*.py",
    "pyodepack/*.pyi",
]


[tool.ruff]
exclude = [
    ".env",
    "example_*"
]

line-length = 150

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]